docs: Ignore certain files from nav config
MkDocs currently logs an informational message stating that files under
the blog/ and gep-696/ (GEP template) paths are not present in the
site's navigation.

  The following pages exist in the docs directory, but are not included
  in the "nav" configuration:

This commit adds MkDocs's `not_in_nav` configuration parameter to
specify that these paths are intentionally excluded from the site's
navigation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -181,3 +181,6 @@ nav:
     - Enhancement Requests: contributing/enhancement-requests.md
     - Release Cycle: contributing/release-cycle.md
     - Contributor Ladder: contributing/contributor-ladder.md
+not_in_nav: |
+  /blog/*
+  /geps/gep-696/*
