--- a/conformance/tests/httproute-308-redirect.yaml
+++ b/conformance/tests/httproute-308-redirect.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: 303-redirect-scheme
+  name: 308-redirect
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
@@ -10,10 +10,9 @@ spec:
   - matches:
     - path:
         type: PathPrefix
-        value: /scheme-and-temporary
+        value: /permanent
     filters:
     - type: RequestRedirect
       requestRedirect:
-        scheme: "https"
-        statusCode: 303
+        statusCode: 308
 
