--- a/conformance/tests/mesh/httproute-307-redirect.yaml
+++ b/conformance/tests/mesh/httproute-307-redirect.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: mesh-307-redirect-host-and-status
+  name: mesh-307-redirect
   namespace: gateway-conformance-mesh
 spec:
   parentRefs:
@@ -13,10 +13,8 @@ spec:
   - matches:
     - path:
         type: PathPrefix
-        value: /host-and-status-temporary
+        value: /temporary
     filters:
     - type: RequestRedirect
       requestRedirect:
         statusCode: 307
-        hostname: example.org
-
