--- a/conformance/tests/mesh/httproute-308-redirect.yaml
+++ b/conformance/tests/mesh/httproute-308-redirect.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: mesh-303-redirect-host-and-status
+  name: mesh-308-redirect
   namespace: gateway-conformance-mesh
 spec:
   parentRefs:
@@ -13,10 +13,9 @@ spec:
   - matches:
     - path:
         type: PathPrefix
-        value: /host-and-status-temporary
+        value: /permanent
     filters:
     - type: RequestRedirect
       requestRedirect:
-        statusCode: 303
-        hostname: example.org
+        statusCode: 308
 
